--- a/openapi/orders.yaml
+++ b/openapi/orders.yaml
@@ -1,10 +1,10 @@
 openapi: 3.0.0
 info:
-  version: '1.0.0'
+  version: '1.0.1'
   title: Pizza Order API
   license:
     name: Apache 2.0
-  description: 'Pizza ordering API Demo for today'
+  description: 'Pizza ordering API'
   contact:
     name: Kong
 servers:
@@ -15,11 +15,7 @@ paths:
     get:
       summary: Fetches an order
       tags:
-        - order
-      x-kong-plugin-mocking:
-        enabled: true
-        config:
-          api_specification_filename: orders.yaml     
+        - order    
       responses:
         '200':
           description: Order object
